Main div (index page) now sizes correctly, filling whitespace above the footer

--- a/process/sass/partials/_main.scss
+++ b/process/sass/partials/_main.scss
@@ -3,7 +3,7 @@
 
 
 #angular-view > div{
-    height: 100%;
+    height: calc(100vh - 20px);
 }
 body {
     font-family: $font-main;
